--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 +-------------------------------+       +---------------------------+
 |          Introduction         |       | Who can modify the list?  |
 +-------------------------------+       +---------------------------+
-| []  - If the task is open.    |       |     Janik Tarverdyan      |
+| []  - If the task is open.    |       |    Melkon Hoavhannisian   |
 | [x] - If the task has a bug.  |       +---------------------------+
 | [v] - If the task is closed.  |
 | >>  - If the task assigned    |
@@ -15,7 +15,7 @@
 | You are going to learn some big and global studies that you need to use   |
 | everywhere. You'll also get different tasks here. Be watchful to not miss |
 | anything and do what TODOs say. Feel free to ask if you have questions.   |
-| The mail for contact: Janik Tarerdyan <Janik.Tarverdyan@gmail.com>        |
+| The mail for contact: Melkon Hovhannisian <Melkon.Hovhannisian@gmail.com> |
 +---------------------------------------------------------------------------+
 
 
