--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -141,25 +141,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Handle the Data\n",
+    "## 🗄 Handle the Data\n",
     "\n",
-    "Download the [data](https://raw.githubusercontent.com/mwitiderrick/insurancedata/master/insurance_claims.csv) for\n",
-    "this tutorial - this is an Insurance Claims dataset with a variety of features and 1000 samples."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "Download the [data](https://raw.githubusercontent.com/seclea/seclea_ai/feature/SPD-1309-add-demo-notebook/docs/examples/insurance_claims.csv) for\n",
+    "this tutorial if you are working on this in Colab or without reference to the repo - this is an Insurance Claims dataset with a variety of features and 1000 samples.\n",
+    "\n",
     "Now we can upload the initial data to the Seclea Platform. \n",
     "\n",
     "This should include whatever information we know about the dataset at this point as metadata. \n",
     "There are only two keys to add in metadata for now - outcome_name and continuous_features.\n",
     "\n",
-    "Outcome name can be omitted if you haven't established what you will be predicting yet, but you should\n",
-    "know or be able to find out the continuous features at this point. It is possible to update these when uploading datasets \n",
+    "You can leave out outcome_name if you haven't decided what you will be predicting yet, but you should\n",
+    "know or be able to find out the continuous features at this point.\n",
+    "\n",
+    "You can also update these when uploading datasets\n",
     "during/after pre-processing. \n"
    ],
    "metadata": {
@@ -177,9 +172,7 @@
     "# load the data \n",
     "data = pd.read_csv('insurance_claims.csv', index_col=\"policy_number\")\n",
     "\n",
-    "# upload the data in its initial state to the Seclea Platform\n",
-    "\n",
-    "\n",
+    "# define the metadata for the dataset.\n",
     "dataset_metadata = {\"outcome_name\": \"fraud_reported\", \n",
     "                    \"continuous_features\": [\n",
     "                                            \"total_claim_amount\",\n",
@@ -192,10 +185,8 @@
     "                                            'incident_hour_of_the_day',\n",
     "                                            ]}\n",
     "\n",
-    "####################################\n",
-    "# UPLOAD\n",
-    "####################################\n",
-    "# upload the dataset - pick a meaningful name here, you'll be seeing it a lot on the platform!\n",
+    "\n",
+    "# ⬆️ upload the dataset - pick a meaningful name here, you'll be seeing it a lot on the platform!\n",
     "seclea.upload_dataset(dataset=data, dataset_name=\"Auto Insurance Fraud\", metadata=dataset_metadata)\n"
    ],
    "metadata": {
@@ -208,9 +199,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Seclea Platform - Datasets\n",
+    "### 🔍 Evaluating the Dataset\n",
     "\n",
-    "Heading back to the platform we can take a look at our Dataset\n",
+    "Head back to the platform, so we can take a look at our Dataset\n",
     "\n",
     "Navigate to the Datasets section - under Prepare tab. See the preview and use the format check/PII check.\n",
     "\n",
@@ -227,10 +218,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Transformations\n",
+    "## 🔀 Transformations\n",
     "\n",
-    "There is one important requirement when using Seclea to record your Data Science work, that is how\n",
-    "to deal with transformations of the data.\n",
+    "When using Seclea to record your Data Science work you will have to take care with how you\n",
+    "deal with transformations of the data.\n",
     "\n",
     "We require that all transformations are encapsulated in a function, that takes the data and returns the\n",
     "transformed data. There are a few things to be aware of so please see the [docs](https://docs.seclea.com) for more."
@@ -248,7 +239,7 @@
     "df1 = data.copy(deep=True)\n",
     "\n",
     "def encode_nans(df):\n",
-    "    # converting the special characters to nans\n",
+    "    # convert the special characters to nans\n",
     "    return df.replace('?', np.NaN)\n",
     "\n",
     "df2 = encode_nans(df1)"
@@ -263,7 +254,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Data pre-processing\n",
+    "## 🧽 Data Cleaning\n",
     "\n",
     "We will carry out some pre-processing and generate a few different datasets so that we\n",
     "can see on the platform how to track these.This also means we can train our models on some\n",
@@ -295,7 +286,7 @@
     }
    ],
    "source": [
-    "## Drop the the column with certain proportion NaN value \n",
+    "## Drop the the column which are more than some proportion NaN values\n",
     "def drop_nulls(df, threshold):\n",
     "    cols = [x for x in df.columns if df[x].isnull().sum() / df.shape[0] > threshold]\n",
     "    return df.drop(columns=cols)\n",
@@ -318,8 +309,8 @@
     "    new_data = data.drop(columns=redundant)\n",
     "    return new_data\n",
     "\n",
+    "# drop columns that are too closely correlated\n",
     "correlation_threshold = 0.9\n",
-    "\n",
     "df4 = drop_correlated(df3, correlation_threshold)"
    ],
    "metadata": {
@@ -332,7 +323,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Upload Intermediate Dataset\n",
+    "## ⬆️ Upload Intermediate Dataset\n",
     "\n",
     "Before getting to balancing the datasets we will upload them to the Seclea Platform.\n",
     "\n",
@@ -384,7 +375,7 @@
     "                                          'incident_hour_of_the_day',\n",
     "                                          ]}\n",
     "\n",
-    "# Define the transformations - note the arguments.\n",
+    "# 🔀 define the transformations - note the arguments\n",
     "cleaning_transformations = [\n",
     "            DatasetTransformation(encode_nans, data_kwargs={\"df\": df1}, kwargs={}, outputs=[\"df\"]),\n",
     "            DatasetTransformation(\n",
@@ -395,10 +386,7 @@
     "            ),\n",
     "        ]\n",
     "\n",
-    "####################################\n",
-    "# UPLOAD\n",
-    "####################################\n",
-    "# Upload the cleaned datasets.\n",
+    "# ⬆️ upload the cleaned datasets\n",
     "seclea.upload_dataset(dataset=df4,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Cleaned\",\n",
     "                      metadata=processed_metadata,\n",
@@ -462,7 +450,7 @@
     "    return new_df\n",
     "\n",
     "\n",
-    "nan_cols = ['collision_type','property_damage','police_report_available']\n",
+    "nan_cols = ['collision_type','property_damage', 'police_report_available']\n",
     "df_mode = fill_nan_mode(df4, nan_cols)\n",
     "\n",
     "\n",
@@ -486,31 +474,25 @@
     "\n",
     "\n",
     "\n",
-    "# here we need to define the transformations we applied to our original dataset\n",
-    "# to get it to this point.\n",
-    "# see the documentation for more details of the formatting this needs.\n",
-    "\n",
+    "# 🔀 define the transformations - for the constant fill dataset\n",
     "const_processed_transformations = [\n",
     "    DatasetTransformation(fill_nan_const, data_kwargs={\"df\": df4}, kwargs={\"val\": const_val}, outputs=[\"df\"]),\n",
     "    DatasetTransformation(encode_categorical, data_kwargs={\"df\": \"inherit\"}, kwargs={\"cat_cols\":cat_cols}, outputs=[\"df\"]),\n",
     "]\n",
     "\n",
-    "####################################\n",
-    "# UPLOAD\n",
-    "####################################\n",
+    "# ⬆️ upload the constant fill dataset\n",
     "seclea.upload_dataset(dataset=df_const, \n",
     "                      dataset_name=\"Auto Insurance Fraud - Const Fill\", \n",
     "                      metadata=processed_metadata,\n",
     "                      transformations=const_processed_transformations)\n",
     "\n",
+    "# 🔀 define the transformations - for the mode fill dataset\n",
     "mode_processed_transformations = [\n",
     "    DatasetTransformation(fill_nan_mode, data_kwargs={\"df\": df4}, kwargs={\"columns\": nan_cols}, outputs=[\"df\"]),\n",
     "    DatasetTransformation(encode_categorical, data_kwargs={\"df\": \"inherit\"}, kwargs={\"cat_cols\": cat_cols}, outputs=[\"df\"]),\n",
     "]\n",
     "\n",
-    "####################################\n",
-    "# UPLOAD\n",
-    "####################################\n",
+    "# ⬆️ upload the mode fill dataset\n",
     "seclea.upload_dataset(dataset=df_mode,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Mode Fill\",\n",
     "                      metadata=processed_metadata,\n",
@@ -522,7 +504,7 @@
     "\n",
     "    return X, y\n",
     "\n",
-    "\n",
+    "# split the datasets into samples and labels ready for modelling.\n",
     "X_const, y_const = get_samples_labels(df_const, \"fraud_reported\")\n",
     "X_mode, y_mode = get_samples_labels(df_mode, \"fraud_reported\")\n",
     "\n",
@@ -534,11 +516,11 @@
     "    )\n",
     "    # returns X_train, X_test, y_train, y_test\n",
     "\n",
-    "\n",
+    "# split into test and train sets\n",
     "X_train_const, X_test_const, y_train_const, y_test_const = get_test_train_splits(X_const, y_const, test_size=0.2, random_state=42)\n",
     "X_train_mode, X_test_mode, y_train_mode, y_test_mode = get_test_train_splits(X_mode, y_mode, test_size=0.2, random_state=42)\n",
     "\n",
-    "\n",
+    "# 🔀 define the transformations - for the constant fill training set\n",
     "const_train_transformations = [\n",
     "    DatasetTransformation(\n",
     "            get_test_train_splits,\n",
@@ -549,6 +531,7 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the const fill training set\n",
     "seclea.upload_dataset_split(\n",
     "                        X=X_train_const,\n",
     "                        y=y_train_const,\n",
@@ -557,6 +540,7 @@
     "                        transformations=const_train_transformations\n",
     ")\n",
     "\n",
+    "# 🔀 define the transformations - for the constant fill test set\n",
     "const_test_transformations = [\n",
     "    DatasetTransformation(\n",
     "            get_test_train_splits,\n",
@@ -567,12 +551,14 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the const fill test set\n",
     "seclea.upload_dataset_split(X=X_test_const,\n",
     "                      y=y_test_const,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Const Fill - Test\",\n",
     "                      metadata=processed_metadata,\n",
     "                      transformations=const_test_transformations)\n",
     "\n",
+    "# 🔀 define the transformations - for the mode fill training set\n",
     "mode_train_transformations = [\n",
     "    DatasetTransformation(\n",
     "            get_test_train_splits,\n",
@@ -583,12 +569,14 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the mode fill train set\n",
     "seclea.upload_dataset_split(X=X_train_mode,\n",
     "                      y=y_train_mode,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Mode Fill - Train\",\n",
     "                      metadata=processed_metadata,\n",
     "                      transformations=mode_train_transformations)\n",
     "\n",
+    "# 🔀 define the transformations - for the mode fill test set\n",
     "mode_test_transformations = [\n",
     "    DatasetTransformation(\n",
     "            get_test_train_splits,\n",
@@ -599,6 +587,7 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the mode fill test set\n",
     "seclea.upload_dataset_split(X=X_test_mode,\n",
     "                      y=y_test_mode,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Mode Fill - Test\",\n",
@@ -625,10 +614,11 @@
     "    return X_sm, y_sm\n",
     "    # returns X, y\n",
     "\n",
+    "# balance the training sets - creating new training sets for comparison\n",
     "X_train_const_smote, y_train_const_smote = smote_balance(X_train_const, y_train_const, random_state=42)\n",
     "X_train_mode_smote, y_train_mode_smote = smote_balance(X_train_mode, y_train_mode, random_state=42)\n",
     "\n",
-    "\n",
+    "# 🔀 define the transformations - for the constant fill balanced train set\n",
     "const_smote_transformations = [\n",
     "    DatasetTransformation(\n",
     "            smote_balance,\n",
@@ -638,12 +628,14 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the constant fill balanced train set\n",
     "seclea.upload_dataset_split(X=X_train_const_smote,\n",
     "                      y=y_train_const_smote,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Const Fill - Smote Train\",\n",
     "                      metadata=processed_metadata,\n",
     "                      transformations=const_smote_transformations)\n",
     "\n",
+    "# 🔀 define the transformations - for the mode fill balanced train set\n",
     "mode_smote_transformations = [\n",
     "    DatasetTransformation(\n",
     "            smote_balance,\n",
@@ -653,6 +645,7 @@
     "            ),\n",
     "]\n",
     "\n",
+    "# ⬆️ upload the mode fill balanced train set\n",
     "seclea.upload_dataset_split(X=X_train_mode_smote,\n",
     "                      y=y_train_mode_smote,\n",
     "                      dataset_name=\"Auto Insurance Fraud - Mode Fill - Smote Train\",\n",
@@ -669,6 +662,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### 🔍 Evaluating the Transformations\n",
+    "\n",
     "Now head to platform.seclea.com again to take another look at the Datasets section. You will see that there is a lot more to look at this time.\n",
     "\n",
     "You can see here how the transformations are used to show you the history of the data and how it arrived in its final state."
@@ -680,7 +675,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 5.Modeling with Balancing Techniques"
+    "# 🛠️ Modeling"
    ],
    "metadata": {
     "collapsed": false
@@ -700,7 +695,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Training"
+    "## 📈 Training"
    ],
    "metadata": {
     "collapsed": false
@@ -782,7 +777,7 @@
     "        # train on the full training set\n",
     "        classifier.fit(X_train, y_train)\n",
     "\n",
-    "        # upload the fully trained model\n",
+    "        # ⬆️ upload the fully trained model\n",
     "        seclea.upload_training_run_split(model=classifier, X_train=X_train, y_train=y_train, X_test=X_test, y_test=y_test)\n",
     "\n",
     "        # test accuracy\n",
@@ -801,7 +796,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Analysis\n",
+    "## 🔍 Analysis\n",
     "\n",
     "Head back to [platform.seclea.com](https://platform.seclea.com) and we can analyse our Models\n",
     "\n"
