Fix images embeds.

--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -46,17 +46,13 @@
     "\n",
     "Create a new project and give it a name and description.\n",
     "\n",
-    "<img src=\"https://github.com/seclea/seclea_ai/media/notebooks/getting_started/create-new-project.png\" width=300/>\n",
-    "<img src=\"https://github.com/seclea/seclea_ai/media/notebooks/getting_started/create-project-name-description.png\" width=300/>\n",
+    "![](https://github.com/seclea/seclea_ai/raw/dev/docs/media/notebooks/getting_started/create-new-project.png)\n",
+    "![](https://github.com/seclea/seclea_ai/raw/dev/docs/media/notebooks/getting_started/create-project-name-description.png)\n",
     "\n",
-    "Go to project settings\n",
+    "- Go to project settings\n",
+    "- Select Compliance, Risk and Performance Templates for this project.\n",
     "\n",
-    "<img src=\"https://github.com/seclea/seclea_ai/media/notebooks/getting_started/project-settings.png\" width=300/>\n",
-    "\n",
-    "Select Compliance, Risk and Performance Templates for this project.\n",
-    "These are optional but are needed to take advantage of Checks. If in doubt leave these empty for now and come back.\n",
-    "\n",
-    "TODO fill in images --- here ---"
+    "These are optional but are needed to take advantage of Checks. If in doubt leave these empty for now and come back."
    ],
    "metadata": {
     "collapsed": false
