Update integration script to add more representative data to the platform. Various tidying with pre-commit and requirements

--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -169,7 +169,9 @@
     "data = pd.read_csv('insurance_claims.csv', index_col=\"policy_number\")\n",
     "\n",
     "# define the metadata for the dataset.\n",
-    "dataset_metadata = {\"outcome_name\": \"fraud_reported\", \n",
+    "dataset_metadata = {\"outcome_name\": \"fraud_reported\",\n",
+    "                    \"favourable_outcome\": \"N\",\n",
+    "                    \"unfavourable_outcome\": \"Y\",\n",
     "                    \"continuous_features\": [\n",
     "                                            \"total_claim_amount\",\n",
     "                                            'policy_annual_premium',\n",
@@ -359,17 +361,8 @@
    "source": [
     "from seclea_ai.transformations import DatasetTransformation\n",
     "\n",
-    "# define the metadata\n",
-    "processed_metadata = {\n",
-    "                  \"outcome_name\": \"fraud_reported\",\n",
-    "                  \"continuous_features\": [\"total_claim_amount\",\n",
-    "                                          'policy_annual_premium',\n",
-    "                                          'capital-gains',\n",
-    "                                          'capital-loss',\n",
-    "                                          'injury_claim',\n",
-    "                                          'property_claim',\n",
-    "                                          'incident_hour_of_the_day',\n",
-    "                                          ]}\n",
+    "# define the updates to the metadata - empty as there are no changes\n",
+    "processed_metadata = {}\n",
     "\n",
     "# 🔀 define the transformations - note the arguments\n",
     "cleaning_transformations = [\n",
