--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -118,7 +118,7 @@
     "from seclea_ai import SecleaAI\n",
     "\n",
     "# NOTE - use the organization name provided to you when issued credentials.\n",
-    "seclea = SecleaAI(project_name=\"Car Insurance Fraud Detection\", organization='Onespan', platform_url=\"http://localhost:8000\", auth_url=\"http://localhost:8010\")"
+    "seclea = SecleaAI(project=\"Car Insurance Fraud Detection\", organization='Onespan', platform_url=\"http://localhost:8000\", auth_url=\"http://localhost:8010\")"
    ],
    "metadata": {
     "collapsed": false,
