--- a/test/test_integration_portal/Insurance_fraud_dataset.ipynb
+++ b/test/test_integration_portal/Insurance_fraud_dataset.ipynb
@@ -153,7 +153,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "seclea = SecleaAI(project_name=\"Insurance Claim\", plat_url=\"https://tristar-platform.seclea.com\")\n",
+    "seclea = SecleaAI(project=\"Insurance Claim\", plat_url=\"https://tristar-platform.seclea.com\")\n",
     "\n",
     "dataset_metadata = {\"index\": None, \"outcome_name\": \"fraud_reported\", \"continuous_features\": [\"total_claim_amount\",'policy_annual_premium','capital-gains','capital-loss','injury_claim','property_claim','vehicle_claim','incident_hour_of_the_day',]}\n",
     "\n",
