fixed tests now passing

--- a/test/test_integration_portal/Insurance_fraud_dataset.ipynb
+++ b/test/test_integration_portal/Insurance_fraud_dataset.ipynb
@@ -6,7 +6,10 @@
     "# 1.Uploading the data"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -117,7 +120,10 @@
     "#2.Understand the dataset "
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -340,7 +346,10 @@
     "# 3.Data preprocessing "
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -543,7 +552,10 @@
     "# 4.Balancing the dataset with SMOTE"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -629,7 +641,10 @@
     "# 5.Hyper-parameter Tuning with various models"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
