Update Getting_Started_with_Seclea.ipynb to fix header levels. Fix index.rst to have notebook under Tutorial section.

--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -601,7 +601,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 🛠️ Modeling"
+    "## 🛠️ Modeling"
    ],
    "metadata": {
     "collapsed": false
@@ -621,7 +621,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 📈 Training"
+    "### 📈 Training"
    ],
    "metadata": {
     "collapsed": false
@@ -679,7 +679,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 🔍 Analysis\n",
+    "### 🔍 Analysis\n",
     "\n",
     "Head back to [platform.seclea.com](https://platform.seclea.com) and we can analyse our Models\n",
     "\n"
