Refactor "outcome_name" to be "outputs" in Dataset metadata. Add optional user metadata key "outputs_type". Add "outputs_info" to Dataset metadata. Minor refactor of dataset processing structure - pulled out some processing functions.

--- a/docs/examples/Getting_Started_with_Seclea.ipynb
+++ b/docs/examples/Getting_Started_with_Seclea.ipynb
@@ -128,9 +128,9 @@
     "Now we can upload the initial data to the Seclea Platform. \n",
     "\n",
     "This should include whatever information we know about the dataset at this point as metadata. \n",
-    "There are only two keys to add in metadata for now - outcome_name and continuous_features.\n",
+    "There are only two keys to add in metadata for now - outputs and continuous_features.\n",
     "\n",
-    "You can leave out outcome_name if you haven't decided what you will be predicting yet, but you should\n",
+    "You can leave out outputs if you haven't decided what you will be predicting yet, but you should\n",
     "know or be able to find out the continuous features at this point.\n",
     "\n",
     "You can also update these when uploading datasets\n",
@@ -152,7 +152,7 @@
     "data = pd.read_csv('insurance_claims.csv', index_col=\"policy_number\")\n",
     "\n",
     "# define the metadata for the dataset.\n",
-    "dataset_metadata = {\"outcome_name\": \"fraud_reported\",\n",
+    "dataset_metadata = {\"outputs\": [\"fraud_reported\"],\n",
     "                    \"favourable_outcome\": \"N\",\n",
     "                    \"unfavourable_outcome\": \"Y\",\n",
     "                    \"continuous_features\": [\n",
